fix toast flicker (read-and-create-calendar-events)

--- a/packages/read-and-create-calendar-events/frontend/react/src/styles/style.scss
+++ b/packages/read-and-create-calendar-events/frontend/react/src/styles/style.scss
@@ -69,7 +69,7 @@ button {
   display: flex;
   align-items: center;
   gap: calc(#{$spacing-16} + #{$spacing-4}/ 2);
-  animation: fadeIn 0.5s, fadeOut 2.8s;
+  animation: fadeIn 0.5s, fadeOut 5.6s cubic-bezier(0.76, 0, 0.24, 1);
 
   &.success {
     background-color: $color-green-50;
